kube/applications/jackett/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jackett
  namespace: applications
  annotations:
    ignore-check.kube-linter.io/no-read-only-root-fs: >-
      FIXME: fix this one
    ignore-check.kube-linter.io/run-as-non-root: >-
      FIXME: fix this one
    ignore-check.kube-linter.io/unset-memory-requirements: >-
      FIXME: fix this one
    ignore-check.kube-linter.io/unset-cpu-requirements: >-
      FIXME: fix this one
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jackett
  template:
    metadata:
      labels:
        app: jackett
    spec:
      containers:
        - name: jackett
          image: linuxserver/jackett:0.22.1669
          ports:
            - containerPort: 9117
          volumeMounts:
            - name: config
              mountPath: /config
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: jackett-pvc
